fix overflow

--- a/1dmoments.css
+++ b/1dmoments.css
@@ -151,7 +151,7 @@ nav {
 }
 
 .container {
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   flex-direction: row;
